# alx-legacy

./: .gitattributes  README.md
data/: big.xml  element.xml  foo.sql  views.sql
src/: .gitignore  CMakeLists.txt  alx.c  alx.h  automata.c  backtrace.c  bottomup.c  cmdline.c  collapsecore.c  collapsemgmt.c  compare.c  cursor.c  forward.h  generate-files.sh  grammarutils.c  graphiter.c  graphmgmt.c  graphremove.c  logging.c  miscutils.c  prng.c  psmgmt.c  quadindex.cxx  randomflat.c  randomquad.c  sqldump.c  sqlquery.c  sqlquery.h  sqlschema.c  strings.c  types.h  typeutils.c  unordered.c  utf8.c  vectorcore.c  vectorutils.c
src/sql/: indices_and_computed_columns.sql  schema.sql  view_all_edges.sql  view_all_edges_reachable_node.sql  view_all_edges_signature.sql  view_all_first_tree_paths.sql  view_cedges.sql  view_cfinals.sql  view_dbg_first_tree.sql  view_dbg_rfp_is_subset.sql  view_dbg_rfp_violations.sql  view_edges_as_dot.sql  view_first_tree_path.sql  view_grammar_edges.sql  view_graph_quads.sql  view_graph_quads_reachable.sql  view_graph_quads_reachable_node.sql  view_graph_quads_roots.sql  view_random_full_path_signature.sql  view_random_matched_text_for.sql  view_tail_edges.sql  xml.sql
tools/: .style.yapf  abnf-xml-to-jet.xslt  jet-binary.py  json-to-xml.py
